<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/activity5_Layout"
    android:layout_height="match_parent"
    android:background="@drawable/background_i"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity5">


...


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:id="@+id/details"

            android:src="@drawable/ic_baseline_format_list_bulleted_24"/>
        <TextView
            android:id="@+id/info_text3"
            android:layout_width="match_parent"
            android:text="Details"
...


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:id="@+id/questionair"
            android:src="@drawable/ic_baseline_contact_support_24"/>

        <TextView
            android:id="@+id/info_text2"
            android:layout_width="match_parent"
            android:text="Questionnaire"
...
        card_view:cardCornerRadius="8dp">


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/writeNote"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_edit_note_24"/>
        <TextView
            android:id="@+id/info_text4"
            android:layout_width="match_parent"
            android:text="Write a note"
...


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:id="@+id/deleteResidentButton"
            android:src="@drawable/ic_baseline_delete_24"/>

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:text="Delete"
...
