<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home"/>

    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_baseline_list_24"
        android:iconTint="@color/black"
        android:title="Resident List"/>

    <item
        android:id="@+id/nav_new"
        android:icon="@drawable/ic_baseline_exposure_plus_1_24"
        android:iconTint="@color/black"
        android:title="New"/>




</menu>