...
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_d"
    android:id="@+id/activity9_Layout"
    tools:context=".Activity9">


        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="wrap_content"
...
        android:layout_below="@id/createPdfButton"
        android:text="Back to Menu"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/lite_orange"
        android:layout_centerHorizontal="true"
        android:id="@+id/goBackButton"/>

    </RelativeLayout>
