<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar"
        />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:src="@drawable/images2"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_below="@+id/logoImage"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:inputType="textPersonName"
        android:background="@color/lite_orange"
        android:textSize="16sp"
        android:drawableLeft="@drawable/ic_action_username"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint=" Password"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:textSize="16dp"
        android:inputType="textPassword"
        android:background="@color/lite_orange"
        android:drawableLeft="@drawable/ic_action_password"
       />

   <Button
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/button"
       android:textColor="@color/black"
       android:backgroundTint="@color/deep_orange"
       android:layout_below="@+id/password"
       android:width="200dp"
       android:height="10dp"
       android:layout_marginTop="50dp"
       android:layout_centerHorizontal="true"
       android:text="Log in "/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:text="Register here"
        android:id="@+id/registerButton"
        android:textColor="@color/grey"
        android:layout_marginTop="45dp"
        />




</RelativeLayout>